<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_drive_button"
            android:icon="@android:drawable/sym_def_app_icon"
            android:title="@string/my_drive" />
        <item
            android:id="@+id/shared_whith_me_button"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/shared" />



        <!-- Sección de configuración -->
        <item
            android:id="@+id/configuration_section"
            android:title="@string/options_title">
            <menu>
                <item
                    android:id="@+id/settings_button"
                    android:icon="@android:drawable/ic_input_add"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/logout_button"
                    android:icon="@android:drawable/ic_notification_clear_all"
                    android:title="@string/logout" />
            </menu>
        </item>
    </group>

</menu>